Fix compiler warnings: remove redundant casts, add serialVersionUID, transient fields, and @SuppressWarnings annotations across 298 files