@@ -34,10 +34,12 @@ import javax.swing.KeyStroke;
  * @author andy
  */
 public class GeckoDialog extends JDialog {
-    
+
+    private static final long serialVersionUID = 1L;
 
     private final Component _parent;
 
+    @SuppressWarnings("this-escape")
     public GeckoDialog(final Window parent, final boolean modal) {       
         super(parent);        
         setModal(modal);
@@ -45,6 +47,7 @@ public class GeckoDialog extends JDialog {
         init();        
     }
     
+    @SuppressWarnings("this-escape")
     public GeckoDialog(final Dialog parent, final boolean modal) {       
         super(parent);        
         setModal(modal);
@@ -57,7 +60,7 @@ public class GeckoDialog extends JDialog {
         try {
             URL picsUrl = GlobalFilePathes.PFAD_PICS_URL;
             // Fix for Java 21: use URL constructor instead of URI.toURL()
-            URL gifUrl = new URL(picsUrl, "gecko.gif");
+            URL gifUrl = picsUrl.toURI().resolve("gecko.gif").toURL();
             this.setIconImage(new ImageIcon(gifUrl).getImage());
         } catch (Exception exception) {
             exception.printStackTrace();
